--- a/app/src/cocacola/res/layout/content_cocacola.xml
+++ b/app/src/cocacola/res/layout/content_cocacola.xml
@@ -9,11 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="br.felipe.gradlepresentation.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="br.felipe.gradlepresentation.cola.CocacolaActivity"
+    tools:showIn="@layout/activity_cocacola">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/personalized_text" />
 </RelativeLayout>
