--- a/app/src/cocacola/res/layout/content_cocacola.xml
+++ b/app/src/cocacola/res/layout/content_cocacola.xml
@@ -12,4 +12,10 @@
     tools:context="br.felipe.gradlepresentation.cola.CocacolaActivity"
     tools:showIn="@layout/activity_cocacola">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Activity exclusiva da coca cola!!"
+        />
+
 </RelativeLayout>
