--- a/app/src/pepsi/res/values/colors.xml
+++ b/app/src/pepsi/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#fe001a</color>
-    <color name="colorPrimaryDark">#A10E20</color>
-    <color name="colorAccent">#000000</color>
+    <color name="colorPrimary">#021BA9</color>
+    <color name="colorPrimaryDark">#021BA9</color>
+    <color name="colorAccent">#BC0A22</color>
 </resources>
